--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-scroll": "^1.9.3",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
