--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lawgic",
+  "name": "thinktank",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,25 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.9",
-    "framer-motion": "^12.4.7",
-    "react": "^19.0.0",
-    "react-countup": "^6.5.3",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "react-scroll": "^1.9.3",
-    "tailwindcss": "^4.0.9"
+    "framer-motion": "^10.16.4",
+    "react": "^18.2.0",
+    "react-countup": "^6.3.2",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-router-dom": "^6.15.0",
+    "react-scroll": "^1.8.9"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "vite": "^4.4.5"
   }
 }
